@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/trivdm
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*trivdm-0_p20150709 (09 Jul 2015)
+
+  09 Jul 2015; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20150709,
+  +trivdm-0_p20150709.ebuild, metadata.xml:
+  Version bump.
 
 *trivdm-0_p20130707-r1 (01 Aug 2013)
 
